DuPont DevSB/src/objects/pse__Proj__c.object
<CustomObject>
    <customHelpPage>pse__ProjectHelp</customHelpPage>
    <description>Represents a collection of business transactions, activities, and related items to be managed over a defined time range, such as timecards, expenses, milestones, and budgets. Typically, people (represented by Resource records) are assigned to projects, though some projects do not require assignments in order to be staffed. Projects may also have a master project (parent) or a sub project (child) in the project hierarchy, supporting roll-ups of revenues, costs, and time to every project and up through the hierarchy.</description>
    <fields>
        <fullName>Billings_Milestones__c</fullName>
        <label>Billings(Milestones)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Case_Study_Comments__c</fullName>
        <label>Case Study Comments</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Study__c</fullName>
        <description>Indicates the status of the case study with regard to the project</description>
        <label>Case Study</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FF_PSA_About_the_Client__c</fullName>
        <label>About the Client</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FF_PSA_About_the_Company__c</fullName>
        <label>Company Information</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FF_PSA_About_the_Project__c</fullName>
        <label>Project Information</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Account_Industry__c</fullName>
        <formula>TEXT(pse__Account__r.Industry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Allow_Accrual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Accrual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Annual_Cost_Escalation__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>% Value to be entered by the BDM. The annual cost escalation is used in calculation of Project Price.</description>
        <label>Annual Cost Escalation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Applied_Project_Price__c</fullName>
        <label>Total Planned Project Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Approved_Profitability__c</fullName>
        <label>Total Planned Profitability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Baseline_Material_Costs__c</fullName>
        <label>Baseline Material Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Baseline_Other_Costs__c</fullName>
        <label>Baseline Other Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Baseline_Profitability__c</fullName>
        <label>Baseline Profitability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Baseline_T_L_Costs__c</fullName>
        <label>Baseline T/L Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Billing_Legal_Entity__c</fullName>
        <label>Billing Legal Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Coastal do Brasil Ltda</fullName>
                </value>
                <value>
                    <fullName>COASTAL TRAIN INDIA</fullName>
                </value>
                <value>
                    <fullName>COASTAL TRAIN TECH</fullName>
                </value>
                <value>
                    <fullName>COASTAL TR TECH SACV</fullName>
                </value>
                <value>
                    <fullName>COASTAL TR TECH SL</fullName>
                </value>
                <value>
                    <fullName>DP de Nemours Morocco SAS</fullName>
                </value>
                <value>
                    <fullName>DUFE Philippines</fullName>
                </value>
                <value>
                    <fullName>DUP (Thailand) Ltd</fullName>
                </value>
                <value>
                    <fullName>DUP Argentina</fullName>
                </value>
                <value>
                    <fullName>Dup Austl Pty Ltd</fullName>
                </value>
                <value>
                    <fullName>DUP Chile</fullName>
                </value>
                <value>
                    <fullName>DUP De Colombia SA</fullName>
                </value>
                <value>
                    <fullName>DUP DE PERU S.A.C.</fullName>
                </value>
                <value>
                    <fullName>DUP Do Brasil SA</fullName>
                </value>
                <value>
                    <fullName>DUP INTL OPERATIONS</fullName>
                </value>
                <value>
                    <fullName>DUP MALAYSIA</fullName>
                </value>
                <value>
                    <fullName>DuPont(China) RD and Mgmt</fullName>
                </value>
                <value>
                    <fullName>Du Pont (Korea) Inc.</fullName>
                </value>
                <value>
                    <fullName>DuPont (New Zealand) Ltd.</fullName>
                </value>
                <value>
                    <fullName>Du Pont Co. (S&apos;pore) Pte</fullName>
                </value>
                <value>
                    <fullName>DU PONT DE NEMOURS NIGERIA LIMITED - IT</fullName>
                </value>
                <value>
                    <fullName>DuPont Italiana</fullName>
                </value>
                <value>
                    <fullName>Dupont Kabushiki Kaisha</fullName>
                </value>
                <value>
                    <fullName>DUPONT KAZAKHSTAN LLP</fullName>
                </value>
                <value>
                    <fullName>DuPont Mexicana S de RL d</fullName>
                </value>
                <value>
                    <fullName>DuPont Prod. S.A.</fullName>
                </value>
                <value>
                    <fullName>Du Pont QFC LLC</fullName>
                </value>
                <value>
                    <fullName>DUPONT ROMANIA</fullName>
                </value>
                <value>
                    <fullName>DuPont S.A. de C.V.</fullName>
                </value>
                <value>
                    <fullName>DUPONT SOLUTIONS (FRANCE)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FF_PSA_Comments__c</fullName>
        <label>Pricing Option Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Contingency__c</fullName>
        <description>Sum of all the Contingency factor %.</description>
        <inlineHelpText>Sum of all the Contingency factor %.</inlineHelpText>
        <label>Contingency</label>
        <summarizedField>Costing__c.FF_PSA_Contg_Tax__c</summarizedField>
        <summaryFilterItems>
            <field>Costing__c.FF_PSA_Cost_Type__c</field>
            <operation>contains</operation>
            <value>Contingency</value>
        </summaryFilterItems>
        <summaryForeignKey>Costing__c.FF_PSA_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FF_PSA_ERP_Customer_No__c</fullName>
        <formula>pse__Account__r.ERP_Account_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ERP Customer No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_First_of_a_kind_project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First of a kind project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Internal_Order_Status__c</fullName>
        <label>Internal Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FF_PSA_Internal_Order__c</fullName>
        <displayFormat>PF{0000000000}</displayFormat>
        <label>SAP Internal Order</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Legal_Entity_Code__c</fullName>
        <label>Legal Entity Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Legal_Terms__c</fullName>
        <label>Requested Contract Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Non Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FF_PSA_Market_Segment__c</fullName>
        <formula>TEXT(pse__Opportunity__r.Market_Segment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Notification_to_be_sent_on__c</fullName>
        <label>Notification to be sent on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Number_Of_Active_Practice__c</fullName>
        <label>Number Of Active Practices</label>
        <summaryFilterItems>
            <field>FF_PSA_Practice_Share__c.FF_PSA_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>FF_PSA_Practice_Share__c.FF_PSA_Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Opportunity_Stage__c</fullName>
        <formula>TEXT(pse__Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Order_Type__c</fullName>
        <formula>if(contains(FF_PSA_Region_Name_Chain__c,&apos;BRAZIL&apos;),&apos;ZBWA&apos;,&apos;ZWA&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Other_Cost__c</fullName>
        <description>Sum of all the other costs at project level eg: Multi Currency cost, IP License cost etc.</description>
        <inlineHelpText>Sum of all the other costs at project level eg: Multi Currency cost, IP License cost etc.</inlineHelpText>
        <label>Planned Other Costs</label>
        <summarizedField>Costing__c.FF_PSA_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Costing__c.FF_PSA_Cost_Type__c</field>
            <operation>contains</operation>
            <value>Additional Termination Cost, MultiCurrency Cost, Other Costs</value>
        </summaryFilterItems>
        <summaryForeignKey>Costing__c.FF_PSA_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Owning_Organization__c</fullName>
        <formula>TEXT( pse__Opportunity__r.Owning_Organisation__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owning Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Payment_Terms__c</fullName>
        <label>Requested Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net 30 days</fullName>
                </value>
                <value>
                    <fullName>Net 45 days</fullName>
                </value>
                <value>
                    <fullName>Net 60 days</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FF_PSA_Planned_RC_Cost_HoldOver__c</fullName>
        <label>Planned RC Cost(HoldOver)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Planned_RC_Cost_Training__c</fullName>
        <label>Planned RC Cost(Training)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Planned_RC_Cost_Travel__c</fullName>
        <label>Planned RC Cost(Travel)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Planned_RC_Cost_Work__c</fullName>
        <label>Planned RC Cost(Work)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Planned_RC_Cost__c</fullName>
        <label>Planned RC Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Planned_Resource_Cost__c</fullName>
        <label>Planned Resource Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Planned_project_cost__c</fullName>
        <description>Overall planned cost of the project that includes planned resource,other cost, T&amp;L Cost and product related costs. This will be used during pricing.</description>
        <formula>ROUND((ROUND (FF_PSA_Planned_Resource_Cost__c ,2)+ ROUND (FF_PSA_Product_related_cost__c,2)+ROUND (FF_PSA_TL_Cost__c ,2)+ROUND (FF_PSA_Other_Cost__c,2)+ROUND (FF_PSA_Total_Planned_Contingency_Cost__c,2)+ROUND (FF_PSA_TOT_Planned_AnnualEscalation_Cost__c,2) 
),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Planned Project Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Plant_No__c</fullName>
        <label>Plant Nb</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Product_related_cost__c</fullName>
        <description>Sum of all the product related cost at a project level</description>
        <label>Planned Material Costs</label>
        <summarizedField>Project_Materials__c.FF_PSA_Material_Item_cost__c</summarizedField>
        <summaryForeignKey>Project_Materials__c.FF_PSA_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Profit_Center__c</fullName>
        <formula>if(CONTAINS(FF_PSA_Owning_Organization__c, &apos;Consulting&apos;),&apos;BD01600&apos;,if(CONTAINS(FF_PSA_Owning_Organization__c, &apos;L&amp;D&apos;),&apos;BD01660&apos;,&apos;BD01600&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Profitability__c</fullName>
        <formula>IF((pse__Billed__c) &lt;&gt; 0, 
(pse__Billed__c  - pse__Internal_Costs__c - pse__External_Costs__c - pse__Expense_Costs__c - pse__Other_Costs__c)/(pse__Billed__c), 
 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profitability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Project_ID__c</fullName>
        <displayFormat>PR-{000000}</displayFormat>
        <label>Project ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Project_Start_Month__c</fullName>
        <formula>TEXT(MONTH( pse__Start_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Start Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Project_Start_Year__c</fullName>
        <formula>TEXT(YEAR( pse__Start_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Start Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Project_Work_Space__c</fullName>
        <label>Project Work Space</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Recommended_Pricing_Option__c</fullName>
        <description>Recommended pricing option populated based on Value to Client and Risk Rating Metrics.</description>
        <label>Recommended Pricing Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Region_Name_Chain__c</fullName>
        <formula>pse__Region__r.pse__Region_Name_Chain__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Name Chain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Responsible_Cost_Center__c</fullName>
        <label>Responsible Cost Center</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Risk_Comments__c</fullName>
        <description>This is Overall Risk Comment</description>
        <label>Risk Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Risk_Rating__c</fullName>
        <description>Final Risk Rating value updated from the Risk Survey.</description>
        <label>Risk Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_PSA_SalesOrg__c</fullName>
        <description>Sales Organization of the customer</description>
        <label>SalesOrg</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Sales_Area__c</fullName>
        <formula>TEXT( pse__Opportunity__r.Sales_Area__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_TL_Cost__c</fullName>
        <description>A read only field, T&amp;L cost an amount calculated from Labor cost or as entered by BDM.</description>
        <inlineHelpText>A read only field, T&amp;L cost an amount calculated from Labor cost or as entered by BDM.</inlineHelpText>
        <label>Planned T&amp;L Cost</label>
        <summarizedField>Costing__c.FF_PSA_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Costing__c.FF_PSA_Cost_Type__c</field>
            <operation>equals</operation>
            <value>T&amp;L Cost</value>
        </summaryFilterItems>
        <summaryForeignKey>Costing__c.FF_PSA_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FF_PSA_TOT_Planned_AnnualEscalation_Cost__c</fullName>
        <label>Total Planned Annual Escalation Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Tax__c</fullName>
        <description>Sum of all the Tax %. The individual tax percentages are added.</description>
        <inlineHelpText>Sum of all the Tax %. The individual tax percentages are added.</inlineHelpText>
        <label>Tax</label>
        <summarizedField>Costing__c.FF_PSA_Contg_Tax__c</summarizedField>
        <summaryFilterItems>
            <field>Costing__c.FF_PSA_Cost_Type__c</field>
            <operation>equals</operation>
            <value>Tax</value>
        </summaryFilterItems>
        <summaryForeignKey>Costing__c.FF_PSA_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Total_Assigned_Resource_Cost__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Baseline Resource Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Total_Planned_Contingency_Cost__c</fullName>
        <formula>FF_PSA_Planned_Resource_Cost__c*FF_PSA_Contingency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Planned Contingency Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Value_To_Client_Assumption__c</fullName>
        <label>Value to Client Assumptions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Value_To_Client_High__c</fullName>
        <label>Value To Client-High</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Value_To_Client_Low__c</fullName>
        <label>Value To Client-Low</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Value_to_Client__c</fullName>
        <description>Value to Client value will be update from ROI tool</description>
        <label>Value to Client</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_additional_comments__c</fullName>
        <label>Additional requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FF_PSA_additional_support__c</fullName>
        <label>Additional Support</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FF_PSA_assign_workspace_admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign Workspace Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Press_Release_Comments__c</fullName>
        <description>Comments regarding the press release for the project</description>
        <label>Press Release Comments</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Press_Release__c</fullName>
        <description>Indicates the status of a press release with regard to the project</description>
        <label>Press Release</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_to_Client_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <description>A checkbox to differentiate if ROI is required to identify recommended pricing option. If  unchecked recommended pricing option will not consider Value to Client and only risk rating will be assessed.</description>
        <label>Value to Client Known</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Action_Count_Billing_Eligible_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Saving the Project with this checkbox checked updates the fields that track Billing Eligible Business Records (TC Splits, Expenses, Milestones, Misc Adjustments, Budgets) for this Project and also auto-unchecks this Action checkbox.</description>
        <inlineHelpText>Saving the Project with this checkbox checked updates the fields that track Billing Eligible Business Records (TC Splits, Expenses, Milestones, Misc Adjustments, Budgets) for this Project and also auto-unchecks this Action checkbox.</inlineHelpText>
        <label>Action: Count Billing Eligible Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Action_Update_Current_Time_Period__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Action: Update Current Time Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Actuals_Last_Update_Date__c</fullName>
        <label>Actuals: Last Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Actuals_Last_Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Actuals: Last Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Actuals_Need_Recalc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actuals: Need Recalc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Allow_Expenses_Without_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked, then Expense Reports (and Expenses) may be logged for this project without the Resource on the Expense Report needing to have an open and current Assignment for the Project.</description>
        <inlineHelpText>If this field is checked, then Expense Reports (and Expenses) may be logged for this project without the Resource on the Expense Report needing to have an open and current Assignment for the Project.</inlineHelpText>
        <label>Allow Expenses Without Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Allow_Self_Staffing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether a resource may create an assignment to this project for his/her own resource. Checking this will allow any and all resources in the system to create assignments to this project.</inlineHelpText>
        <label>Allow Self-Staffing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Allow_Timecards_Without_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked, then Timecards may be logged for this project without the Resource on the Timecard needing to have an open and current Assignment for the Project.  Such projects are typically called &quot;Global&quot; projects - e.g. Vacation, Sick Leave, Maternity/Paternity Leave.</description>
        <inlineHelpText>If this field is checked, then Timecards may be logged for this project without the Resource on the Timecard needing to have an open and current Assignment for the Project.</inlineHelpText>
        <label>Allow Timecards Without Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Backlog_Last_Update_Date__c</fullName>
        <label>Backlog: Last Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Backlog_Last_Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Backlog: Last Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Batch_Sequence_Number__c</fullName>
        <formula>VALUE(pse__Batch_Sequence__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Batch_Sequence__c</fullName>
        <description>Used for reliable sorting of projects so a large collection of projects can be split into batches.</description>
        <displayFormat>{0}</displayFormat>
        <label>Batch Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Expense_Fee_Flat__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Flat fee in Project currency by which to increase the billable amount of any Expense logged for the Project.  The calculation will apply any percentage expense fee*before* this flat expense fee amount.</description>
        <inlineHelpText>Flat fee in Project currency by which to increase the billable amount of any Expense logged for the Project.  The calculation will apply any percentage expense fee*before* this flat expense fee amount.</inlineHelpText>
        <label>Billable Expense Fee Flat</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Expense_Fee_Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Fee percentage by which to increase the billable amount of any Expense logged for the Project.  0% means no increase (default), whereas 100% means double.  The calculation will apply the percentage expense fee*before* any flat expense fee.</description>
        <inlineHelpText>Fee percentage by which to increase the billable amount of any Expense logged for the Project.  0% means no increase (default), whereas 100% means double.  The calculation will apply the percentage expense fee*before* any flat expense fee.</inlineHelpText>
        <label>Billable Expense Fee Percentage</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Billable_External_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Hours (External)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Internal_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Hours (Internal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billed__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Eligible_Budgets__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Budgets that are currently available for billing event generation.  The maximum number of records you can track is 1999.</description>
        <inlineHelpText>Number of Budgets that are currently available for billing event generation.  The maximum number of records you can track is 1999.</inlineHelpText>
        <label>Billing Eligible Budgets</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Eligible_Expenses__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Expenses that are currently available for billing event generation.  The maximum number of records you can track is 1999.</description>
        <inlineHelpText>Number of Expenses that are currently available for billing event generation.  The maximum number of records you can track is 1999.</inlineHelpText>
        <label>Billing Eligible Expenses</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>